fix text body sm align

--- a/home/style.css
+++ b/home/style.css
@@ -79,7 +79,8 @@ h4 {
   font-size: 1.07em;
   font-weight: 400;
   line-height: 1.6;
-  letter-spacing: 0;  
+  letter-spacing: 0;
+  text-align: center;
 }
 
 .lora {
